--- a/site/web/app/themes/immaterial/assets/styles/common/_variables.scss
+++ b/site/web/app/themes/immaterial/assets/styles/common/_variables.scss
@@ -20,8 +20,9 @@ $color-primary-contrast: $palette-alabaster-500 !default;
 // Our accent is dark, so use $color-dark-contrast for overlaid text.
 $color-accent-contrast: $palette-alabaster-500 !default;
 
-$preferred_font: 'Helvetica', 'Arial', sans-serif !default;
-$performance_font: 'Helvetica', 'Arial', sans-serif !default;
+$preferred_font: Georgia, serif !default;
+$performance_font: Georgia, serif !default;
+$sans-serif-font: 'Helvetica', 'Arial', sans-serif;
 
 $trim-color-classes: false !default;
 
